<resources>
    <string name="app_name">Chess4Android</string>
    <string name="puzzle_of_day">Puzzle of Day</string>
    <string name="about">About</string>
    <string name="chessroyale">ChessRoyale</string>
    <string name="authors">Authors</string>
    <string name="credits">Credits</string>
    <string name="authors_text">Made by:\n46033 - Marco Duarte\n46052 - Daniel Caseiro\n46067 - Tiago Neves\nClass:LI5XD \nGroup: 13</string>
    <string name="credits_text">The source of the daily puzzles where obtain from:</string>
    <string name="api_lichess">API Lichess</string>
    <string name="status_unsolved">Not Solved</string>
    <string name="status_solved">Solved</string>
    <string name="play">Play</string>
    <string name="back">Back</string>
    <string name="solution">Solution</string>
    <string name="history">Puzzle History</string>
    <string name="reset">Reset</string>
    <string name="winnerText">The winner is team </string>
    <string name="create_challenge_prompt_challenger_name">Name</string>
    <string name="create_challenge_prompt_message">Message</string>
    <string name="create_challenge_button_label_in_short">Post it</string>
    <string name="create_challenge_button_label">Post challenge</string>
    <string name="create_challenge_waiting_message">Waiting for the contender</string>
    <string name="list_create_challenge_button_label">New Chanllenge</string>
    <string name="cancel_challenge_button_label">Cancel</string>
    <string name="error_creating_challenge">Could not create challenge</string>
    <string name="error_getting_list">Could not fetch challenges list</string>
    <string name="accept_challenge_dialog_title">Accept %s\'s challenge?</string>
    <string name="accept_challenge_dialog_ok">Ok</string>
    <string name="accept_challenge_dialog_cancel">Cancel</string>

</resources>