<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreviewPuzzleActivity">


    <TextView
        android:id="@+id/royale2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="104dp"
        android:fontFamily="cursive"
        android:text="Royale"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/puzzleOfDay_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

    <Button
        android:id="@+id/btPermMenu2"
        android:layout_width="221dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_black_king"
        android:fontFamily="cursive"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/boardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck"></Button>

    <TextView
        android:id="@+id/chess2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="24dp"
        android:fontFamily="cursive"
        android:text="Chess"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btSolution"
        android:layout_width="105dp"
        android:layout_height="59dp"
        android:layout_marginEnd="16dp"
        android:src="@android:color/transparent"
        app:backgroundTint="#3770d2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boardViewPreview"
        app:layout_constraintVertical_bias="0.504"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="6dp"
        android:text="@string/solution"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btSolution"
        app:layout_constraintEnd_toEndOf="@+id/btSolution"
        app:layout_constraintStart_toStartOf="@+id/btSolution"
        app:layout_constraintTop_toTopOf="@+id/btSolution" />

    <pt.isel.pdm.chess4android.views.BoardView
        android:id="@+id/boardViewPreview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </pt.isel.pdm.chess4android.views.BoardView>

    <Button
        android:id="@+id/btPrevBack"
        android:layout_width="105dp"
        android:layout_height="59dp"
        android:src="@android:color/transparent"
        app:backgroundTint="#e60000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btSolution"
        app:layout_constraintStart_toEndOf="@+id/btPrevPlay"
        app:layout_constraintTop_toBottomOf="@+id/boardViewPreview"
        app:layout_constraintVertical_bias="0.504"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btPrevPlay"
        android:layout_width="107dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:src="@android:color/transparent"
        app:backgroundTint="#1cca36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boardViewPreview"
        app:layout_constraintVertical_bias="0.504"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="6dp"
        android:text="@string/play"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btPrevPlay"
        app:layout_constraintEnd_toEndOf="@+id/btPrevPlay"
        app:layout_constraintStart_toStartOf="@+id/btPrevPlay"
        app:layout_constraintTop_toTopOf="@+id/btPrevPlay" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="6dp"
        android:text="@string/back"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btPrevBack"
        app:layout_constraintEnd_toEndOf="@+id/btPrevBack"
        app:layout_constraintStart_toStartOf="@+id/btPrevBack"
        app:layout_constraintTop_toTopOf="@+id/btPrevBack" />

</androidx.constraintlayout.widget.ConstraintLayout>